deployment/stacks/service/base/template/network-policy/uec-dos-api-cs-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: uec-dos-api-cs-default-deny-ingress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
