deployment/stacks/service/base/template/network-policy/uec-dos-api-cs-proxy-allow-external-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: uec-dos-api-cs-proxy-allow-external-ingress
spec:
  podSelector:
    matchLabels:
      app: uec-dos-api-cs-proxy
  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 443
